# fork-pymace

./: .gitignore  README.md  Xterm.log.mace-VirtualBox.2024.10.09.21.48.44.16030  debug.sh  emulator_core_gui.py  main.py  pymace.py  requirements.txt  settings.json  uas_client.py  utm_server_etcd.py  varre.sh
apps/: app.py
apps/crdt-replica/rapid/: CMakeLists.txt
apps/crdt-replica/rapid/include/: cache.h  castqueue.h  crdt_handler.h  gossip.h  neighbors.h  network.h  stats.h
apps/crdt-replica/rapid/src/: cache.cpp  castqueue.cpp  crdt_handler.cpp  gossip.cpp  main.cpp  neighbors.cpp  network.cpp  stats.cpp
classes/: node.py
docs/: t7_message_counting.md
evaluation/: .README.md.swo  .README.md.swp  README.md  aggregate_results.py  analyze_reference_point_group.py  analyze_trickle_calibration.py  apps.json  calibrate_trickle.sh  collect_all_results.py  collect_logs.py  compila.sh  compute_degree_sample.py  connectivity.sh  do_it.sh  expand_experiments.py  generate_node_config.py  generate_scenario.py  generate_scenario_broadcast.py  generate_scenario_rapid.py  gera.sh  gera_compact.sh  get.py  get_boxes.py  get_error.py  get_fail.py  get_means.py  gps_logger.py  jobs.json  output_results.txt  parse_convergence.py  parse_message_counts.py  parse_metrics.py  parse_network.py  parse_trickle_events.py  plot.py  plot_cps.py  plot_degree_ecdf.py  plot_first_graph.py  plot_results.py  process_pcaps.py  (+8 more)
mace-vue/: package-lock.json
scaffold/: app.py
scenarios/: scen.py  swarm-consensus.json  swarm-crdt-rapid.json  swarm-crdt.json  swarm-paxi-mob-replica3.json  (+5 more)
(+172 files in other folders)
